--- a/package.json
+++ b/package.json
@@ -1,18 +1,54 @@
 {
-  "name": "onito-assignment",
+  "homepage": "",
+  "name": "boas",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.15.11",
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
+    "@types/jquery": "^3.5.29",
+    "@types/js-cookie": "3.0.3",
+    "@xstate/react": "3.2.2",
+    "classnames": "^2.5.1",
+    "cookies-ts": "1.0.5",
+    "datatables.net": "^2.0.0",
+    "datatables.net-dt": "^2.0.0",
+    "date-fns": "2.30.0",
+    "i18next": "23.5.1",
+    "jquery": "^3.7.1",
+    "js-cookie": "3.0.5",
+    "react": "18.2.0",
+    "react-aria-components": "^1.0.1",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
+    "react-hotkeys": "^2.0.0",
+    "react-i18next": "13.2.2",
+    "react-icons": "4.10.1",
+    "react-loader-spinner": "5.3.4",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "6.14.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-toastify": "8.1.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "tailwind": "4.0.0",
+    "uuid": "9.0.0",
+    "web-vitals": "2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +70,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.3.3"
   }
 }
